--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./frontend:/usr/src/app
-    command: sh -c "cd app && npm start"
+    command: sh -c "cd app && npm install && npm start"
     ports:
       - "3000:3000"
 volumes:
