--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     stdin_open: true
     tty: true
     volumes:
-      - ./backend:/myapp
+      - ./backend:/rails/
       - bundle:/usr/local/bundle
     command: bash -c "rm -rf tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     depends_on:
