--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,29 @@
-version: '3.7'
-
 services:
   db:
-    image: mysql:8.0
-    platform: linux/x86_64
+    image: mysql:8.0.29
     command: --default-authentication-plugin=mysql_native_password
-    ports:
-      - "4306:3306"
     volumes:
-      - db:/var/lib/mysql
+      - ./tmp/db:/var/lib/mysql
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-    security_opt:
-      - seccomp:unconfined
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - "3306:3306"
+
   backend:
-    build:
-      context: ./backend/
-      dockerfile: Dockerfile
-    stdin_open: true
-    tty: true
+    build: ./backend/
     volumes:
-      - ./backend:/rails/
-      - bundle:/usr/local/bundle
-    command: bash -c "rm -rf tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
-    depends_on:
-      - db
+      - ./backend:/backend
     ports:
       - "3001:3000"
-    environment:
-      TZ: Asia/Tokyo
-  frontend:
+    depends_on:
+      - db
+
+  front:
     build:
       context: ./frontend/
       dockerfile: Dockerfile
     volumes:
-      - ./frontend:/usr/src/app
-    command: sh -c "cd app && npm install typescript && npm install styled-components && npm install axios && npm install && npm start"
+      - ./frontend:/frontend
+    command: sh -c "cd app && npm i styled-components && PORT=3001 yarn start"
     ports:
-      - "3000:3000"
-volumes:
-  db:
-    driver: local
-  bundle:
-    driver: local
+      - "3000:3001"
