--- a/frontend/app/tsconfig.json
+++ b/frontend/app/tsconfig.json
@@ -18,8 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": "src", // import するときに絶対パスで書けるように指定
+    "jsx": "react-jsx"
   },
   "include": [
     "src"
